Fix spacing issues in about list

--- a/src/components/projects/projectslist.sass
+++ b/src/components/projects/projectslist.sass
@@ -35,7 +35,7 @@
     max-width: 350px
     height: 400px
     filter: grayscale(100%)
-    transition: filter 0.1s ease-in-out
+    transition: filter 0.2s ease-in-out
     border-radius: 6px 0 0 6px
   
     @include mobile
